--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1{
     float: right;
     font-weight: 500;
     font-size: 16px;
-    background-color: cadetblue;
+    background-color: rgb(27, 121, 125);
     border: none;
     color: #ffffff;
     cursor: pointer;
