--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h1{
 #newtask{
     padding: 30px 20px;
 }
-#newtask input{
+#newtask textarea{
     width: 75%;
     height: 45px;
     padding: 12px;
@@ -39,6 +39,7 @@ h1{
     font-family: 'Poppins',sans-serif;
     font-size: 15px;
     border: 2px solid #1c1e1f9b;
+    resize: none;
 }
 #newtask button{
     position: relative;
@@ -77,7 +78,7 @@ h1{
 }
 .task span{
     font-family: 'Poppins',sans-serif;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 500;
 }
 .task button{
@@ -90,6 +91,8 @@ h1{
     outline: none;
     height: 100%;
     width: 40px;
+    padding: auto;
+    margin: 3px;
     border-radius: 5px;
     font-weight: 500;
     font-size: 16px;
