--- a/style.css
+++ b/style.css
@@ -89,11 +89,17 @@ h1{
     border: none;
     cursor: pointer;
     outline: none;
-    height: 100%;
-    width: 40px;
+    height: 23px;
+    width: 30px;
     padding: auto;
     margin: 3px;
     border-radius: 5px;
     font-weight: 500;
     font-size: 16px;
 }
+input[type=checkbox] {
+    accent-color:rgb(27, 121, 125);
+    width: 30px;
+    height: 23px;
+    border-radius: 5px;
+  }
