--- a/mvc.css
+++ b/mvc.css
@@ -26,15 +26,13 @@ button {
   display: inline-block;
   padding: .5rem 1rem;
   font-size: 1rem;
-  border: 2px solid black;
+  border: 2px solid #444;
   border-radius: 4px;
 }
-
 button {
   cursor: pointer;
   background: #007bff;
   color: white;
-  border: 2px solid #007bff;
   margin: 0 .5rem;
 }
 
