--- a/mvc.css
+++ b/mvc.css
@@ -13,7 +13,8 @@ html {
 #root {
   max-width: 450px;
   margin: 2rem auto;
-  padding: 0 1rem;
+  background-color: darkgray;
+  padding: 1rem;
 }
 
 form {
@@ -26,12 +27,11 @@ button {
   display: inline-block;
   padding: .5rem 1rem;
   font-size: 1rem;
-  border: 2px solid #444;
   border-radius: 4px;
 }
 button {
   cursor: pointer;
-  background: #007bff;
+  background: rgb(48, 44, 44);;
   color: white;
   margin: 0 .5rem;
 }
@@ -43,16 +43,20 @@ button {
 [type="text"]:active,
 [type="text"]:focus {
   outline: 0;
-  border: 2px solid #007bff;
+  border: 2px solid rgb(48, 44, 44);;
 }
 
 [type="checkbox"] {
   margin-right: 1rem;
   font-size: 2rem;
+  accent-color:rgb(48, 44, 44);
+  width: 30px;
+  height: 23px;
+
 }
 
 h1 {
-  color: #222;
+  color: black;
 }
 
 ul {
@@ -82,6 +86,6 @@ li span:hover {
 
 li span:focus {
   outline: 0;
-  border: 2px solid #007bff;
+  border: 2px solid rgb(48, 44, 44);;
   background: rgba(179, 207, 255, 0.52)
 }
