--- a/style.css
+++ b/style.css
@@ -23,7 +23,12 @@ h1{
     background: white;
     border-radius: 10px;
     min-width: 450px;
-    position: absolute;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-items: center;
+    flex-direction: column;
+    margin: 2rem auto;
+    padding: auto;
 }
 #newtask{
     padding: 30px 20px;
@@ -62,6 +67,8 @@ h1{
     background-color: #ffffff;
     margin-top: 10px;
     padding: 20px 10px;
+    display: flex;
+    flex-direction: column;
 }
 
 .task{
